# arbitrary-session-management

./: CONTRIBUTING.md  README.md  lint_checker.bat
.github/: CODEOWNERS  (+1 more)
example_measurement/: DmmMeasurementWithLogger.pinmap  DmmMeasurement_example.seq  NIDmmMeasurement.measui  NIDmmMeasurement.pinmap  PinMap.pinmap  file_logger_service.proto  logger_service.proto  measurement.py  pyproject.toml  session.py  session_constructor.py
example_measurement/stubs/: __init__.py  file_logger_service.proto  file_logger_service_pb2.py  file_logger_service_pb2.pyi  file_logger_service_pb2_grpc.py  file_logger_service_pb2_grpc.pyi  logger_service_pb2.py  logger_service_pb2.pyi  logger_service_pb2_grpc.py  logger_service_pb2_grpc.pyi
src/: JsonLogger.serviceconfig  __init__.py  example.ndjson  json_logger.proto  logger_service.proto  pyproject.toml  server.py  start.bat
src/client/: README.md  pyproject.toml  setup.bat
src/client/client_session/: __init__.py  json_logger.proto  session.py  session_constructor.py
src/client/client_session/stubs/: __init__.py  json_logger_pb2.py  json_logger_pb2_grpc.py  json_logger_pb2_grpc.pyi
src/custom_instr_session_sharing/client/: README.md  pyproject.toml  setup.bat
src/custom_instr_session_sharing/client/client_session/: device_comm_service.proto  session.py  session_constructor.py
src/custom_instr_session_sharing/client/client_session/stubs/: __init__.py  (+4 more)
src/custom_instr_session_sharing/client/device_communication_client/: session.py  session_constructor.py
src/custom_instr_session_sharing/device_comm_proto_stubs/: pyproject.toml
src/custom_instr_session_sharing/device_comm_proto_stubs/device_comm_proto_stubs/: device_comm_service_pb2_grpc.py
src/custom_instr_session_sharing/examples/pinmap/: Custom Instrument Info.pinmap  CustomInstrumentInfo.pinmap
src/custom_instr_session_sharing/examples/register_map/: sample_register_map.csv
src/custom_instr_session_sharing/examples/simple measurement/: SimpleMeasurement.measproj  SimpleMeasurement.measui  measurement.py  pyproject.toml
src/custom_instr_session_sharing/examples/simple_measurement/: README.md  SimpleMeasurement.instudioproj  SimpleMeasurement.measproj  SimpleMeasurement.measui  SimpleMeasurement.serviceconfig  SimpleMeasurement.sfp  measurement.py  pyproject.toml  start.bat
src/custom_instr_session_sharing/examples/teststand_sequence/: DeviceCommExample.seq  README.md  pyproject.toml  teststand_device_comm.py
src/custom_instr_session_sharing/proto_file/: device_comm_service.proto
src/custom_instr_session_sharing/proto_stubs/: device_comm_service.proto  pyproject.toml
src/custom_instr_session_sharing/proto_stubs/stubs/: __init__.py  device_comm_service_pb2.py  device_comm_service_pb2.pyi  device_comm_service_pb2_grpc.py  device_comm_service_pb2_grpc.pyi
src/custom_instr_session_sharing/server/: README.md  constants.py  device_comm.serviceconfig  device_comm_service.proto  pyproject.toml  server.py  start.bat  test_client.py  test_registers.csv
src/custom_instr_session_sharing/server/stubs/: device_comm_service_pb2.py  device_comm_service_pb2.pyi  device_comm_service_pb2_grpc.py  device_comm_service_pb2_grpc.pyi
src/custom_instr_session_sharing/stubs/: pyproject.toml
src/custom_instr_session_sharing/stubs/stubs/: device_comm_service_pb2.pyi  device_comm_service_pb2_grpc.py  device_comm_service_pb2_grpc.pyi
src/examples/: .env.simulation
src/examples/nidcpower_measurement_with_logger/: NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerWithLogger.measproj  NIDCPowerWithLogger.pinmap  NIDCPowerWithLogger.serviceconfig  NIDCPowerWithLogger.sfp  README.md  _helpers.py  measurement.py  pyproject.toml
src/examples/nidmm_measurement_with_logger/: NIDmmMeasurementWithLogger.instudioproj  NIDmmMeasurementWithLogger.measproj  NIDmmMeasurementWithLogger.measui  NIDmmMeasurementWithLogger.pinmap  NIDmmMeasurementWithLogger.serviceconfig  NIDmmMeasurementWithLogger.sfp  README.md  _helpers.py  measurement.py  pyproject.toml  start.bat
src/examples/pinmap/: FileSessionSharing.pinmap
src/examples/teststand_sequence/: FileSessionSharing.seq  README.md  RenamedSequence.seq  _helpers.py  pyproject.toml  teststand_json_logger.py  teststand_nidcpower.py  teststand_nidmm.py
src/file_logger/: FileLogger.serviceconfig  __init__.py  logger_service.proto  logger_service.py  start.bat
src/file_logger/stubs/: __init__.py  logger_service_pb2.py  logger_service_pb2.pyi  logger_service_pb2_grpc.py  logger_service_pb2_grpc.pyi
src/file_logger_service/: FileLogger.serviceconfig  __init__.py  file_logger_service.proto  file_logger_service.py  install.bat  logger_service.py  server.py  session_proto.url  start.bat
src/file_logger_service/stubs/: __init__.py  file_logger_service_pb2.py  file_logger_service_pb2.pyi  file_logger_service_pb2_grpc.py  file_logger_service_pb2_grpc.pyi  session_pb2.py  session_pb2_grpc.py
src/file_session_sharing/client/: pyproject.toml
src/file_session_sharing/client/client_session/: __init__.py
src/file_session_sharing/examples/nidcpower_measurement_with_logger/: NIDCPowerWithLogger.measui  NIDCPowerWithLogger.sfp  _helpers.py
src/file_session_sharing/examples/nidmm_measurement_with_logger/: NIDmmMeasurementWithLogger.instudioproj  NIDmmMeasurementWithLogger.measproj  NIDmmMeasurementWithLogger.serviceconfig  README.md  pyproject.toml
src/file_session_sharing/examples/pinmap/: FileSessionSharing.pinmap
src/file_session_sharing/examples/teststand_sequence/: README.md  pyproject.toml  teststand_json_logger.py
src/file_session_sharing/server/: pyproject.toml
src/file_session_sharing/server/stubs/: __init__.py  json_logger_pb2_grpc.pyi
src/server/: README.md  client.py  json_logger.proto  pyproject.toml  server.py  start.bat
src/server/stubs/: json_logger_pb2.pyi  json_logger_pb2_grpc.py
src/stubs/: json_logger_pb2.py  json_logger_pb2.pyi  json_logger_pb2_grpc.py  json_logger_pb2_grpc.pyi
src/teststand_sequence/: FileSessionSharing.seq  PinMap.pinmap  README.md  _helpers.py  pyproject.toml  setup.bat  teststand_json_logger.py
(+30 files in other folders)
