[project]
name = "session-managed-file-logger"
version = "1.0.0"
description = "A user-defined service that manages sessions and logs data to a file"
authors = [{ name = "NI", email = "opensource@ni.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "^3.9"
[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
