[project]
name = "client-session"
version = "1.0.0"
description = "JSON Logger client-side stubs, session and its constructor package."
authors = [{ name = "NI", email = "opensource@ni.com" }]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
    "ni-measurement-plugin-sdk-service (>=2.3.0,<3.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
