[tool.poetry]
name = "proto-stubs"
version = "1.0.0"
description = "gRPC stubs for device communication service"
authors = ["NI <opensource@ni.com>"]
packages = [
    { include = "stubs" }
]

[tool.poetry.dependencies]
python = "^3.9"
grpcio-tools = ">=1.71.0,<2.0.0"
mypy-protobuf = ">=3.6.0,<4.0.0"