[project]
name = "simple_measurement"
version = "0.1.0"
description = "Simple Measurement Plug-In example "
authors = [
    {name = "NI", email ="opensource@ni.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry.dependencies]
ni-measurement-plugin-sdk-service = ">=2.3.0,<3.0.0"
click = ">=8.1.3,<9.0.0"
# The client-session is the package that provides the client interface for the device communication to this measurement.
client-session = { path = "../../client" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
