[project]
name = "simple_measurement"
version = "1.0.0"
description = "Simple Measurement Plug-In example that performs the device communication using the custom instrument."
authors = [
    {name = "NI", email ="opensource@ni.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry.dependencies]
python = "^3.9"
ni-measurement-plugin-sdk-service = ">=2.3.0,<3.0.0"
click = ">=8.1.3,<9.0.0"
# The client-session is the package that provides the client interface for the device communication to this measurement.
device_communication_client = { path = "../../client"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
